<?xml version="1.0"?>
<package>
  <name>tuw_control</name>
  <version>0.0.1</version>
  <description>The tuw_control package</description>

  <maintainer email="todorangrg@gmail.com">George Todoran</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tuw_local_navigation</url> -->

  <author email="todorangrg@gmail.com">George Todoran</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tuw_geometry</build_depend>
  
  <run_depend>tuw_geometry</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
